# NinjaTradeBuilder-v2

./: .gitignore  README.md  pyproject.toml
docs/: operator-quickstart.md
src/ninjatradebuilder/: __init__.py  cli.py  config.py  gemini_adapter.py  prompt_assets.py  readiness_adapter.py  runtime.py  watchman.py
src/ninjatradebuilder.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ninjatradebuilder/packet_compiler/: __init__.py  cli.py  es.py  models.py  sources.py
src/ninjatradebuilder/schemas/: outputs.py
tests/: test_cli.py  test_gemini_adapter.py  test_output_schema_validation.py  test_packet_compiler.py  test_prompt_assets.py  test_readiness_adapter.py  test_readiness_web.py  test_runtime_execution.py  test_watchman.py
tests/fixtures/compiler/: es_historical_input.valid.json  es_overlay.valid.json
